--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
+    "axios": "^1.7.4",
     "jodit-react": "^4.1.2",
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "react-table": "^7.8.0",
     "recharts": "^2.12.7"
   },
