--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@mui/material": "^5.16.7",
     "axios": "^1.7.4",
     "jodit-react": "^4.1.2",
+    "js-cookie": "^3.0.5",
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-table": "^7.8.0",
+    "react-toastify": "^10.0.5",
     "recharts": "^2.12.7"
   },
   "devDependencies": {
