--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@heroicons/react": "^2.1.5",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
+    "@prisma/client": "^5.17.0",
     "axios": "^1.7.4",
     "jodit-react": "^4.1.2",
     "js-cookie": "^3.0.5",
@@ -28,6 +29,6 @@
   },
   "devDependencies": {
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.2.0"
   }
 }
